fixing deploy script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,12 +50,21 @@ jobs:
       - image: buildpack-deps:trusty
     steps:
       - checkout
+      # - run: 
+      #     name: Install EB CLI
+      #     command: |
+      #       sudo apt-get -y -qq update
+      #       sudo apt-get install python-pip python-dev build-essential
+      #       sudo pip install awsebcli --upgrade 
       - run: 
-          name: Install EB CLI
-          command: |
-            sudo apt-get -y -qq update
-            sudo apt-get install python-pip python-dev build-essential
-            sudo pip install awsebcli --upgrade 
+          name: Install EB CLI 1/3
+          command: sudo apt-get -y -qq update
+      - run: 
+          name: Install EB CLI 2/3
+          command:  sudo apt-get install python-pip python-dev build-essential -y
+      - run: 
+          name: Install EB CLI 3/3
+          command: sudo pip install awsebcli --upgrade 
       - run:
           name: Deploy to AWS EB
           command: eb deploy learnzone-aws-stag
