--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,14 +57,16 @@ jobs:
       #       sudo apt-get install python-pip python-dev build-essential
       #       sudo pip install awsebcli --upgrade 
       - run: 
-          name: Install EB CLI 1/3
-          command: sudo apt-get -y -qq update
-      - run: 
-          name: Install EB CLI 2/3
-          command:  sudo apt-get install python-pip python-dev build-essential -y
-      - run: 
-          name: Install EB CLI 3/3
-          command: sudo pip install awsebcli --upgrade 
+          name: Install EB CLI
+          command: |
+            sudo apt-get -y update
+            sudo apt-get -y install python-pip python-dev build-essential
+            sudo pip install awsebcli --upgrade 
+      - run: ls
+      - run: ls .elasticbeanstalk
+      - run: eb list
       - run:
           name: Deploy to AWS EB
-          command: eb deploy learnzone-aws-stag
+          command: |
+            eb use learnzone-aws-stag
+            eb deploy learnzone-aws-stag
