--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 .env
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
+!.elasticbeanstalk/config.yml
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
 
