--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,5 +77,5 @@ jobs:
       - run:
           name: Deploy to AWS EB
           command: |
-            eb use learnzone-aws-stag --profile eb-cli
-            eb deploy learnzone-aws-stag --profile eb-cli
+            eb use learnzone-aws --profile eb-cli
+            eb deploy learnzone-aws --profile eb-cli
