--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,5 @@
 workflows:
-  version: 2
+  version: 2.1
   # Staging deployment
   build-deploy:
     jobs:
@@ -30,7 +30,7 @@ workflows:
       - schedule:
           # https://crontab.guru/
           # Time is UTC
-          cron: '5 * * * *'
+          cron: '20 * * * *'
           filters:
             branches:
               only:
@@ -38,28 +38,53 @@ workflows:
     jobs:
       - build
 
-version: 2
+version: 2.1
+
+# Requires 2.1: https://circleci.com/docs/2.0/configuration-reference/#executors-requires-version-21
+executors:
+  app-builder:
+    - docker:
+        - image: circleci/ruby:2.5.1-node-browsers
+        # Examples
+        # environment:
+        #   RAILS_ENV: test
+        #   DATABASE_TEST_URL: postgresql://root@localhost/circle_test
+        # If there were a need of a DB for testing
+        - image: circleci/postgres:9.6.5-alpine-ram
+      working_directory: ~/repo
+  aws-deployer:
+    - docker: circleci/python:3.7.2-stretch-node-browsers-legacy
+
+# Requires 2.1: https://circleci.com/docs/2.0/configuration-reference/#commands-requires-version-21
+commands:
+  deploy-aws-eb:
+    description: 'Deploy to AWS Elastic Beanstalk'
+    parameters:
+      env:
+        type: String
+    steps:
+      - run:
+          name: Install EB CLI
+          command: sudo pip install awsebcli --upgrade
+      - run:
+          name: Create AWS credentials manually
+          command: |
+            mkdir ~/.aws
+            touch ~/.aws/config
+            chmod 600 ~/.aws/config
+            echo "[profile eb-cli]" > ~/.aws/config
+            echo "aws_access_key_id=$AWS_ACCESS_KEY_ID" >> ~/.aws/config
+            echo "aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" >> ~/.aws/config
+      - run:
+          name: Deploy to AWS EB (Prod)
+          command: eb deploy << parameters.env >> --profile eb-cli --label << parameters.env >>-$CIRCLE_BUILD_NUM
 
 jobs:
   build:
-    docker:
-      # specify the version you desire here
-      # >> https://hub.docker.com/r/circleci/ruby/
-      - image: circleci/ruby:2.5.1-node-browsers
-        environment:
-          RAILS_ENV: test
-          # https://circleci.com/docs/2.0/databases/
-          DATABASE_TEST_URL: postgresql://root@localhost/circle_test
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      - image: circleci/postgres:9.6.5-alpine-ram
-    working_directory: ~/repo
+    executor: app-builder
 
     steps:
       - checkout
-
-      # === Dependencies ===
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -75,43 +100,15 @@ jobs:
           key: learnzone-aws-dependencies-{{ checksum "Gemfile.lock" }}
 
   deploy-dev:
-    docker:
-      - image: circleci/python:3.7.2-stretch-node-browsers-legacy
+    executor: aws-deployer
     steps:
       - checkout
-      - run:
-          name: Install EB CLI
-          command: sudo pip install awsebcli --upgrade
-      - run:
-          name: Create AWS credentials manually
-          command: |
-            mkdir ~/.aws
-            touch ~/.aws/config
-            chmod 600 ~/.aws/config
-            echo "[profile eb-cli]" > ~/.aws/config
-            echo "aws_access_key_id=$AWS_ACCESS_KEY_ID" >> ~/.aws/config
-            echo "aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" >> ~/.aws/config
-      - run:
-          name: Deploy to AWS EB (Dev)
-          command: eb deploy learnzone-aws-dev --profile eb-cli --label learnzone-aws-dev-$CIRCLE_BUILD_NUM
+      - deploy-aws-eb:
+          env: learnzone-aws-dev
 
   deploy-prod:
-    docker:
-      - image: circleci/python:3.7.2-stretch-node-browsers-legacy
+    executor: aws-deployer
     steps:
       - checkout
-      - run:
-          name: Install EB CLI
-          command: sudo pip install awsebcli --upgrade
-      - run:
-          name: Create AWS credentials manually
-          command: |
-            mkdir ~/.aws
-            touch ~/.aws/config
-            chmod 600 ~/.aws/config
-            echo "[profile eb-cli]" > ~/.aws/config
-            echo "aws_access_key_id=$AWS_ACCESS_KEY_ID" >> ~/.aws/config
-            echo "aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" >> ~/.aws/config
-      - run:
-          name: Deploy to AWS EB (Prod)
-          command: eb deploy learnzone-aws --profile eb-cli --label learnzone-aws-$CIRCLE_BUILD_NUM
+      - deploy-aws-eb:
+          env: learnzone-aws
