--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,8 @@ executors:
       - image: circleci/postgres:9.6.5-alpine-ram
     working_directory: ~/repo
   aws-deployer:
-    docker: circleci/python:3.7.2-stretch-node-browsers-legacy
+    docker: 
+      - image: circleci/python:3.7.2-stretch-node-browsers-legacy
 
 # Requires 2.1: https://circleci.com/docs/2.0/configuration-reference/#commands-requires-version-21
 commands:
@@ -61,7 +62,7 @@ commands:
     description: 'Deploy to AWS Elastic Beanstalk'
     parameters:
       env:
-        type: String
+        type: string
     steps:
       - run:
           name: Install EB CLI
