--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,10 @@
+# Global CircleCI used version
+version: 2.1
+
+# ------------------------------------------------------------------------------
+# Workflows
+# version is set at 2
+# ------------------------------------------------------------------------------
 workflows:
   version: 2
   # Staging deployment
@@ -16,6 +23,16 @@ workflows:
           type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"
           requires: # We only run the "hold" job when test2 has succeeded
             - build
+          steps:
+            - slack/notify:
+                # Optional: Enter your own message
+                message: 'A deploy is on hold for a manual approval for http://learnzone-aws-dev.eu-west-3.elasticbeanstalk.com/'
+                # Optional: Enter the Slack IDs of any user or group (sub_team) to be mentioned
+                mentions: 'al-un'
+                # Optional: Assign custom colors for each notification
+                color: '#e5bd0b'
+                # Optional: Enter a specific webhook here or the default will use $SLACK_WEBHOOK
+                # webhook: 'webhook'
           # filters:
           #   branches:
           #     only: master
@@ -38,9 +55,10 @@ workflows:
     jobs:
       - build
 
-version: 2.1
-
-# Requires 2.1: https://circleci.com/docs/2.0/configuration-reference/#executors-requires-version-21
+# ------------------------------------------------------------------------------
+# Executors: list of executing environments (requires version: 2.1)
+# https://circleci.com/docs/2.0/configuration-reference/#executors-requires-version-21
+# ------------------------------------------------------------------------------
 executors:
   app-builder:
     docker:
@@ -53,10 +71,21 @@ executors:
       - image: circleci/postgres:9.6.5-alpine-ram
     working_directory: ~/repo
   aws-deployer:
-    docker: 
+    docker:
       - image: circleci/python:3.7.2-stretch-node-browsers-legacy
 
-# Requires 2.1: https://circleci.com/docs/2.0/configuration-reference/#commands-requires-version-21
+# ------------------------------------------------------------------------------
+# Orbs: pre-configuration (requires version: 2.1)
+# https://circleci.com/docs/2.0/using-orbs/
+# ------------------------------------------------------------------------------
+orbs:
+  # https://github.com/CircleCI-Public/slack-orb
+  slack: circleci/slack@1.0.0
+
+# ------------------------------------------------------------------------------
+# Executors: list of re-usable commands (requires version: 2.1)
+# https://circleci.com/docs/2.0/configuration-reference/#commands-requires-version-21
+# ------------------------------------------------------------------------------
 commands:
   deploy-aws-eb:
     description: 'Deploy to AWS Elastic Beanstalk'
@@ -80,7 +109,11 @@ commands:
           name: Deploy to AWS EB (Prod)
           command: eb deploy << parameters.env >> --profile eb-cli --label << parameters.env >>-$CIRCLE_BUILD_NUM
 
+# ------------------------------------------------------------------------------
+# Jobs: list of workflow jobs
+# ------------------------------------------------------------------------------
 jobs:
+  # Dependencies installation
   build:
     executor: app-builder
     steps:
@@ -98,14 +131,19 @@ jobs:
           paths:
             - ./vendor/bundle
           key: learnzone-aws-dependencies-{{ checksum "Gemfile.lock" }}
+      - slack/notify
 
+  # Deploy to dev
   deploy-dev:
     executor: aws-deployer
     steps:
       - checkout
       - deploy-aws-eb:
           env: learnzone-aws-dev
+      - slack/status:
+          mentions: "al-un"
 
+  # Deploy to prod
   deploy-prod:
     executor: aws-deployer
     steps:
