--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,9 @@ workflows:
             branches:
               only: master
       # testing manual approval
-      - approval: # <<< A job that will require manual approval in the CircleCI web application.
-          type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"
-          requires: # We only run the "hold" job when test2 has succeeded
+      - approval:
+          type: approval
+          requires:
             - before_approval
           # filters:
           #   branches:
@@ -38,18 +38,6 @@ workflows:
           # filters:
           #   branches:
           #     only: master
-  # nightly:
-  #   triggers:
-  #     - schedule:
-  #         # https://crontab.guru/
-  #         # Time is UTC
-  #         cron: '31 * * * *'
-  #         filters:
-  #           branches:
-  #             only:
-  #               - develop
-  #   jobs:
-  #     - build
 
 # ------------------------------------------------------------------------------
 # Executors: list of executing environments (requires version: 2.1)
@@ -59,12 +47,6 @@ executors:
   app-builder:
     docker:
       - image: circleci/ruby:2.5.1-node-browsers
-      # Examples
-      # environment:
-      #   RAILS_ENV: test
-      #   DATABASE_TEST_URL: postgresql://root@localhost/circle_test
-      # If there were a need of a DB for testing
-      - image: circleci/postgres:9.6.5-alpine-ram
     working_directory: ~/repo
   aws-deployer:
     docker:
@@ -137,7 +119,7 @@ jobs:
           # Optional: Enter your own message
           message: 'A deploy is on hold for a manual approval: https://circleci.com/workflow-run/$CIRCLE_WORKFLOW_ID'
           # Optional: Enter the Slack IDs of any user or group (sub_team) to be mentioned
-          mentions: 'alun'
+          mentions: 'Alun'
           # Optional: Assign custom colors for each notification
           color: '#e5bd0b'
           # Optional: Enter a specific webhook here or the default will use $SLACK_WEBHOOK
