--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,15 +29,9 @@ workflows:
           type: approval
           requires:
             - before_approval
-          # filters:
-          #   branches:
-          #     only: master
       - deploy-prod:
           requires:
             - approval
-          # filters:
-          #   branches:
-          #     only: master
 
 # ------------------------------------------------------------------------------
 # Executors: list of executing environments (requires version: 2.1)
@@ -112,18 +106,13 @@ jobs:
 
   # Hey! approve!
   before_approval:
-    docker: # executor type
-      - image: buildpack-deps:trusty # primary container will run Ubuntu Trusty
+    docker:
+      - image: buildpack-deps:trusty
     steps:
       - slack/notify:
-          # Optional: Enter your own message
           message: 'A deploy is on hold for a manual approval: https://circleci.com/workflow-run/$CIRCLE_WORKFLOW_ID'
-          # Optional: Enter the Slack IDs of any user or group (sub_team) to be mentioned
           mentions: 'Alun'
-          # Optional: Assign custom colors for each notification
           color: '#e5bd0b'
-          # Optional: Enter a specific webhook here or the default will use $SLACK_WEBHOOK
-          # webhook: 'webhook'
 
   # Deploy to dev
   deploy-dev:
