--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,18 @@ workflows:
           filters:
             branches:
               only: develop
+      - pouet:
+          filters:
+            branches:
+              only: /^feature\/.*/
+            steps:
+              - run: echo "hello from a /^feature\/.*/ branch"
+      - plop:
+          filters:
+            branches:
+              only: /^feature.*/
+            steps:
+              - run: echo "hello from a /^feature.*/ branch"
       # request approval on Slack
       - before_approval:
           requires:
