adding docker to dummy jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,9 +101,13 @@ commands:
 # ------------------------------------------------------------------------------
 jobs:
   pouet:
+    docker:
+      - image: buildpack-deps:trusty
     steps:
       - run: echo "hello pouet branch"
   plop:
+    docker:
+      - image: buildpack-deps:trusty
     steps:
       - run: echo "hello plop branch"
   # Dependencies installation
