--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,14 +17,6 @@ workflows:
           filters:
             branches:
               only: develop
-      - pouet:
-          filters:
-            branches:
-              only: /^feature\/.*/
-      - plop:
-          filters:
-            branches:
-              only: /^feature.*/
       # request approval on Slack
       - before_approval:
           requires:
@@ -45,8 +37,6 @@ workflows:
             # if manual approval is required, this filtering is not necessary
             branches:
               only: master
-            tags:
-              only: /^v.*/
 
 # ------------------------------------------------------------------------------
 # Executors: list of executing environments (requires version: 2.1)
@@ -70,7 +60,7 @@ orbs:
   slack: circleci/slack@1.0.0
 
 # ------------------------------------------------------------------------------
-# Executors: list of re-usable commands (requires version: 2.1)
+# Commands: list of re-usable commands (requires version: 2.1)
 # https://circleci.com/docs/2.0/configuration-reference/#commands-requires-version-21
 # ------------------------------------------------------------------------------
 commands:
@@ -100,16 +90,6 @@ commands:
 # Jobs: list of workflow jobs
 # ------------------------------------------------------------------------------
 jobs:
-  pouet:
-    docker:
-      - image: buildpack-deps:trusty
-    steps:
-      - run: echo "hello pouet branch"
-  plop:
-    docker:
-      - image: buildpack-deps:trusty
-    steps:
-      - run: echo "hello plop branch"
   # Dependencies installation
   build:
     executor: app-builder
